skeplib/tests/fixtures/sema/valid/control_flow_break_continue.sk
fn main() -> Int {
  let i = 0;
  let acc = 0;
  while (i < 5) {
    i = i + 1;
    if (i == 3) {
      continue;
    }
    if (i == 5) {
      break;
    }
    acc = acc + i;
  }
  return acc;
}
