skeplib/tests/fixtures/sema/invalid/float_modulo.sk
fn main() -> Int {
  let x = 9.0 % 4.0;
  return 0;
}
